# icontract-hypothesis_Lauren

./: .gitignore  .~lock.17_07_2021_aoc2020.csv#  .~lock.17_07_2021_aoc2020.ods#  17_07_2021_aoc2020.csv  17_07_2021_aoc2020.ods  17_07_2021_aoc2020_style.csv  README.md  aocdbc_test_generation_script.py  functions_to_test.py  generate_property_table.py  generate_symbol_table.py  generate_test_suite_from_file.py  metrics.py  metrics_results.txt  property_table_to_strategies.py  pyproject.toml  strategy_factory.py  test_contracts.py  test_generate_strategies.py  test_generate_symbol_table.py
metrics/: IC2_results.csv  IC_results.csv  analytics.py  argument_type_statistics.csv  failing_strategies.csv  metrics.py  type_hints_per_function.csv
tests/: aocdbc_test_generation_script.py  expected_strategies.py  functions_to_test.py  generate_test_suite_from_file.py  strategy_generation_tests.py  test_contracts.py  test_generate_strategies.py  test_generate_symbol_table.py  test_properties.py  test_strategies.py
tests/expected_output/custom_types/: add_dataclass_class.txt  add_dbc_class.txt  add_normal_class.txt
tests/expected_output/dictionaries/: universal_values.txt
tests/expected_output/integers/: base_1.txt  base_10.txt  base_2.txt  base_3.txt  base_4.txt  base_5.txt  base_6.txt  base_7.txt  base_8.txt  base_9.txt
tests/expected_output/lists/: complex_linked_filter.txt  complex_linked_filter_2.txt  existential_1.txt  filter_index.txt  is_unique.txt  link_1.txt  nested_filter_index.txt  not_in.txt  universal_1.txt  universal_2.txt  universal_filter_1.txt  (+3 more)
(+42 files in other folders)
