[tool.poetry]
name = "icontract_hypothesis_lauren"
version = "0.1.0"
description = ""
authors = ["Lauren <debruynlauren1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.1"
hypothesis = "^6.14.3"
icontract = "^2.5.3"
astunparse = "^1.6.3"
black = "^21.7b0"
mypy = "^0.910"
tabulate = "^0.8.9"
astor = "^0.8.1"
python-by-contract-corpus = "^2021.7.10-rc.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
